--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -10,7 +10,7 @@ by decomposing it into spherical harmonics, $Y_{\ell m}$,
 \begin{equation}
         a_{\ell m} = \int d\Omega ~ \delta_{g} W Y^{*}_{\ell m}.
 \end{equation}
-The mean galaxy density $\overline{\rho}$ is estimated from the entire LRG sample\footnote{The mean galaxy density is calculated separately for each region when we fit the power spectrum from each region individually.} and the survey window $W$ is determined by comparing the number of randoms to the expected number. Then, the angular power spectrum is estimated by
+The mean galaxy density $\overline{\rho}$ is estimated from the entire LRG sample\footnote{The mean galaxy density is calculated separately for each region when we fit the power spectrum from each region individually.} and \mr{the survey window $W$ is determined by comparing the number of randoms to the expected number}. Then, the angular power spectrum is estimated by
 \begin{equation}\label{eq:pusedocell}
         \tilde{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |a_{\ell m}|^{2}.
 \end{equation}
@@ -20,11 +20,11 @@ We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package 
  \subsection{Modeling}
 
 \subsubsection{Angular power spectrum}
-The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
+\mr{Would nonlinear P(k) matter?} The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
 \begin{equation}\label{eq:cell}
 C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where $N_{\rm shot}$ is a shot noise term that is not dependent on scale. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ includes redshift space distortions and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details, refer to \cite{Padmanabhan2007}. The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
+where $N_{\rm shot}$ is a scale-independent shot noise term. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ includes redshift space distortions and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details, refer to \cite{Padmanabhan2007}. The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r (b+\Delta b) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
     \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
@@ -34,7 +34,7 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}. The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}, and do not marginalize over $p$ to avoid projection effects \citep{2022JCAP...11..013B}.
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. \mr{Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}.} \mr{Santi: p=1 for galaxies assumes this on top of assuming that halos follow a universal halo mass function (only depending on peak height)} The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}, and do not marginalize over $p$ to avoid projection effects \citep{2022JCAP...11..013B}.
 
 \subsubsection{Survey geometry and integral constraint}
 \mr{We employ a technique similar to the one proposed by \cite{chon2004fast} to account for the impact of the survey geometry on the theoretical power spectrum.} The ensemble average for the partial sky power spectrum is related to that of the full sky power spectrum via a mode-mode coupling matrix, $M_{\ell \ell^{\prime}}$,
@@ -79,13 +79,13 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Characterization of remaining systematics}
 \label{ssec:characterization}
-
+\mr{Santi: I feel like this section would make more sense in "2.Data"}
 In the absence of systematic effects, a) the mean galaxy density should be uniform across the footprint within the statistical fluctuations regardless of imaging conditions and b) the cross power spectrum between the galaxy density and the imaging systematic maps should be consistent with zero within the statistical fluctuations. In the following, two statistical tests are implemented and applied to quantify remaining systematic effects in our sample \cite[see, also,][]{rezaie2021primordial}.
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
-\caption{The cross power spectra between the DR9 LRG sample and imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the cross spectra before imaging systematic correction. The red, blue and orange curves represent the results after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $97.5$ percentile from cross correlating the imaging systematic maps and the $\fnl=0$ and $76.9$ lognormal density fields, respectively.}\label{fig:clxmock}
+\caption{\mr{The normalized cross power spectra between the DR9 LRG sample and imaging systematic maps}: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the cross spectra before imaging systematic correction. The red, blue and orange curves represent the results after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $97.5$ percentile from cross correlating the imaging systematic maps and the $\fnl=0$ and $76.9$ lognormal density fields, respectively.}\label{fig:clxmock}
 \end{figure*}
 
 \begin{figure*}
@@ -105,11 +105,11 @@ In the absence of systematic effects, a) the mean galaxy density should be unifo
 
 \subsubsection{Cross power spectrum}
 
-We calculate the cross power spectra between the galaxy density and imaging \mr{systematic} maps \bbk{[Could we call them something else here (maybe contaminant maps)? I first got confused and thought you were cross-correlating redshift slices in your imaging survey, but maybe our readers will read more carefully than me]},
+We characterize the cross correlations between the galaxy density and imaging \mr{systematic} maps by \bbk{[Could we call them something else here (maybe contaminant maps)? I first got confused and thought you were cross-correlating redshift slices in your imaging survey, but maybe our readers will read more carefully than me]}
 \begin{equation}
 \tilde{C}_{X, \ell} = [\tilde{C}_{x_{1}, \ell}, \tilde{C}_{x_{2}, \ell}, \tilde{C}_{x_{3}, \ell}, ..., \tilde{C}_{x_{9}, \ell}],
 \end{equation}
-where $\tilde{C}_{x_{i}, \ell}$ represents the cross power spectrum between the galaxy density and $i^{\rm th}$ imaging map, $x_{i}$, normalized by the auto power spectrum of $x_{i}$:
+where $\tilde{C}_{x_{i}, \ell}$ represents \mr{the normalized cross power spectrum, determined from the the square of} the cross power spectrum between the galaxy density and $i^{\rm th}$ imaging map, $x_{i}$, divided by the auto power spectrum of $x_{i}$:
 \begin{equation}
 \tilde{C}_{x_{i}, \ell} = \frac{(\tilde{C}_{gx_{i}, \ell})^{2}}{\tilde{C}_{x_{i}x_{i},\ell}}.
 \end{equation}
@@ -119,7 +119,7 @@ Then, the $\chi^{2}$ value for the cross power spectra is calculated via,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. These $\chi^{2}$ values are measured for every mock realization with the \textit{leave-one-out} technique and compared to the values observed in the DR9 sample with various imaging systematic corrections. \bbk{[Can you elaborate a more what you mean by that?]} \mr{Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$.} We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DR9 LRG sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. \mr{Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in g and r, and psfsize in z, which could be driven because of the inner correlations between the imaging systematic maps}. As the most conservative cleaning approach, a linear model is trained with the extinction and z-band depth maps (\textit{linear two maps}) to derive the imaging systematic weights. With the correction applied, we find that the cross power spectrum against the r-band psfsize increases (dot-dashed blue curve), which indicates that only extinction and depth in the z-band are not sufficient to regress out all of the residual cross correlations between the LRG density and imaging. With the linear model re-trained using the three maps (\textit{linear three maps}), we are able to reduce the cross power spectra (dotted orange curve). For comparison, we also show the cross spectra for a case in which the DR9 is cleaned using the linear model trained with all imaging systematic maps (dashed red curve). There are minor differences between the \textit{linear three maps} and \textit{linear eight maps} cross spectra, further supporting the idea that only three imaging systematic maps are sufficient to regress out spurious correlations.
+Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DR9 LRG sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. \mr{Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps}. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psftsize in r, but not psfsize in z. On the other hand, nonlinear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and nonlinear four maps. 
 
 Figure \ref{fig:chi2test} (top) \bbk{[Figure 7 hasn't been discussed yet]} shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 LRG sample are quoted for comparison. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though training the linear model with all imaging systematic maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
@@ -145,7 +145,7 @@ Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in
 
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
 
-
+\mr{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more. }
 The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are fed to the regression. Supported by our remaining systematic test, \textit{nonlinear three maps} is therefore chosen as our default approach and is applied to the mocks (with and without contaminations) to calibrate the $\fnl$ biases induced by over-correction. Below we describe an approach for the calibration and de-biasing of our $\fnl$ constraints. 
 
 \begin{figure}
@@ -173,8 +173,8 @@ Nonlinear Nine Maps & 2.35 & 63.5\\
 \end{table}
 
 
-To calibrate for over-correction, we utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination model is based on the linear multivariate approach with the extinction, z-band depth, and r-band psfsize maps as input and parameters drawn from the likelihood constrained by the DR9 LRG sample. The idea is to simulate systematic effects that reflect spurious fluctuations as  realistic as the DR9 LRG sample. For correction, the neural network model is trained and applied to the simulations with various sets of imaging systematic maps as input. Particularly, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. We fit both the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks (with the mitigation procedure applied) are considered as the measured $\fnl$ values. Figure \ref{fig:fnlbias} shows the $\fnl$ values before mitigation vs the $\fnl$ values after mitigation  from fitting the mean power spectrum (solid lines) and individual spectra (points) for the mocks without systematics. The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the individual contaminated mocks are not shown for visual clarity. 
+To calibrate for over-correction, we utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination model is based on the linear multivariate approach with the extinction, z-band depth, and r-band psfsize maps as input and parameters drawn from the likelihood constrained by the DR9 LRG sample. The idea is to simulate systematic effects that reflect spurious fluctuations as  realistic as the DR9 LRG sample. For correction, the neural network model is trained and applied to the simulations with various sets of imaging systematic maps as input. Particularly, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. We fit both the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks (with the mitigation procedure applied) are considered as the measured $\fnl$ values. Figure \ref{fig:fnlbias} shows the best fit estimates of $\fnl$ before mitigation vs the best fit $\fnl$ estimates after mitigation from the mean power spectrum (solid lines) and individual spectra (points) for the mocks without systematics. The dashed lines represent the best fit estimates from the contaminated realizations. The best fit estimates for the individual contaminated mocks are not shown for visual clarity. 
 
-Then, a pair of linear parameters are found to map the measured values to the true values, $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for the mean power spectrum are summarized in Table \ref{tab:debiasparams}. The coefficients for the \textit{nonlinear nine maps} approach are the highest, as more mitigation bias is expected if more imaging systematic maps are used. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{nonlinear nine maps} and minimum for \textit{nonlinear three maps}. 
+Then, a pair of linear parameters are found to transform the $\fnl$ values after mitigation to those before mitigation, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for nonlinear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. The uncertainty in $\fnl$ increases by $m_{1}-1$. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{nonlinear nine maps} and minimum for \textit{nonlinear three maps}, as the effect of over-correction is more significant when the number of imaging systematics maps as input to the neural network increases. 
 
 \mr{Emphasize that the mitigation bias or over-correction effect is the same regardless of the mocks being contaminated or not.}
