--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -3,8 +3,8 @@ We have presented constraints on the local primordial non-Gaussianity parameter 
 
 We use the FFTLog algorithm to model the angular clustering on large scales or multipoles as low as $\ell=2$ (Figure \ref{fig:model_mock}). We simulate lognormal density fields with DESI-like LRG angular and redshift distributions to validate the pipeline, estimate covariance matrices, and characterize remaining systematic errors. Our mock test reveals that the distribution of power spectra on large scales is asymmetric (Figure \ref{fig:histcell}). We demonstrate our likelihood inference benefits from fitting the log transformation of the power spectrum. 
 
-Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neural hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal (Figure \ref{fig:pcc}). The LRG density map is cross-correlated against the imaging systematic maps (Figure \ref{fig:clxmock}), and the mean LRG density is calculated for different regions with similar imaging to look for systematic trends in the mean density (Figure \ref{fig:nbarmock}). We quantify the remaining systematic fluctuations using the mean density and cross-power spectrum and run null tests against lognormal density fields (Figure \ref{fig:chi2test}). Our simulation-based tests reveal that the DR9 LRG sample with linear correction suffers from remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. 
+Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neutral hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal (Figure \ref{fig:pcc}). The LRG density map is cross-correlated against the imaging systematic maps (Figure \ref{fig:clxmock}), and the mean LRG density is calculated for different regions with similar imaging to look for systematic trends in the mean density (Figure \ref{fig:nbarmock}). Using the mean density and cross-power spectrum diagnostics, we quantify the remaining systematics against lognormal simulations (Figure \ref{fig:chi2test}). We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. Our simulation-based tests reveal that the DESI LRG targets cleaned with linear three maps suffers from significant remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. 
 
-We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints (Table \ref{tab:debiasparams} and Figure \ref{fig:fnlbias}). With three maps, we obtain best fit estimates which are inconsistent with zero at more than $95\%$ confidence. Adding local stellar density to the list of maps used for cleaning the LRG sample does not influence the constraints. However, using the combination of all imaging systematic maps and stellar density yields an asymmetric likelihood distribution with larger uncertainty and consistent with $\fnl=0$ at $95\%$ confidence (Table \ref{tab:dr9methodcalib}). \mr{This is interesting as the same covariance matrix is used for all; but we find that the \textit{nonlinear nine maps} approach introduces a larger bias by having a larger multiplicative parameter, $m_{1}$, Table \ref{tab:debiasparams}.} Overall, our nonlinear cleaning methods return consistent best fit estimates of $\fnl \sim 47-50$ (Figure \ref{fig:mcmc_dr9}). We run multiple robustness tests but find no significant changes other than that there is spurious correlation against stellar density in the NGC and potential calibration issues in the SGC below DEC$< -30$ (Table \ref{tab:dr9method}). Our constraints are consistent with each other when each imaging region is fit separately and/or the lowest mode used is increased (Figure \ref{fig:mcmc_dr9reg} and Figure \ref{fig:mcmc_dr9elmin}). Assuming Planck's measurement of $\fnl$ is accurate a priori, our results indicate some unknown calibration error. Our results also suggest follow-up investigations of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. \mr{Hui: cite LRG redshift success rate, stellar contamination rate. Noting possible improvements when we have all spectra data available.} On the other hand, calibrating simulations for the over correction effect might not be feasible for DESI spectroscopy. So, a simulation based forward model approach for estimating the imaging weights can become helpful to reduce the dimensionality of the imaging parameter space. We leave the idea of combining the forward-modeling and backward-modeling cleaning approaches to future work. Another source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only, which is shown to be a naive assumption. Improving the methods for handling imaging systematics and calibrating the uncertainties around halo assembly bias, together, will enable us to derive reliable, accurate, and precise $\fnl$ results.
+We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints (Table \ref{tab:debiasparams} and Figure \ref{fig:fnlbias}). With three maps, we obtain best fit estimates which are inconsistent with zero at more than $95\%$ confidence. Adding local stellar density to the list of maps used for cleaning the LRG sample does not influence the constraints. However, using the combination of all imaging systematic maps and stellar density yields an asymmetric likelihood distribution with larger uncertainty and consistent with $\fnl=0$ at $95\%$ confidence (Table \ref{tab:dr9methodcalib}). \mr{This is interesting as the same covariance matrix is used for all; but we find that the \textit{nonlinear nine maps} approach introduces a larger bias by having a larger multiplicative parameter, $m_{1}$, Table \ref{tab:debiasparams}.} Overall, our nonlinear cleaning methods return consistent best fit estimates of $\fnl \sim 47-50$ (Figure \ref{fig:mcmc_dr9}). We run multiple robustness tests but find no significant changes other than that there is spurious correlation against stellar density in the NGC and potential calibration issues in the SGC below DEC$< -30$ (Table \ref{tab:dr9method}). Our constraints are consistent with each other when each imaging region is fit separately and/or the lowest mode used is increased (Figure \ref{fig:mcmc_dr9reg} and Figure \ref{fig:mcmc_dr9elmin}). Assuming Planck's measurement of $\fnl$ is accurate a priori, our results indicate some unknown calibration error. \mr{Santi: Potentially, this could also indicate a more complicated type of PNG (scale dependent, beyond quadratic fnl, non-local...) I would also discuss possible implications from assuming a different cosmology.} Our results also suggest follow-up investigations of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. \mr{Hui: cite LRG redshift success rate, stellar contamination rate. Noting possible improvements when we have all spectra data available.} On the other hand, calibrating simulations for the over correction effect might not be feasible for DESI spectroscopy. So, a simulation based forward model approach for estimating the imaging weights can become helpful to reduce the dimensionality of the imaging parameter space. We leave the idea of combining the forward-modeling and backward-modeling cleaning approaches to future work. Another source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only, which is shown to be a naive assumption. Improving the methods for handling imaging systematics and calibrating the uncertainties around halo assembly bias, together, will enable us to derive reliable, accurate, and precise $\fnl$ results.
 
 \clearpage
