--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -41,7 +41,7 @@ where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnot
 \begin{equation}\label{eq:mixm}
     <\tilde{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>.
 \end{equation}
-\mr{We convert this convolution in the spherical harmonics space into a multiplication in the correlation function space. Specifically, we first express the theory power spectrum (Equation \ref{eq:cell}) in terms of the correlation function, $\hat{\omega}^{\rm model}$, using the spherical harmonics transform. Then, we estimate the survey mask correlation function, $\hat{\omega}^{\rm window}$, and obtain the pseudo-power spectrum,}
+\mr{We convert this convolution in the spherical harmonic space into a multiplication in the correlation function space. Specifically, we first transform the theory power spectrum (Equation \ref{eq:cell}) to the correlation function, $\hat{\omega}^{\rm model}$. Then, we estimate the survey mask correlation function, $\hat{\omega}^{\rm window}$, and obtain the pseudo-power spectrum,}
 \begin{align}
     \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm window}~P_{\ell}(\cos \theta) d\theta.
 \end{align}
